--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,19 @@
 .bookContainer {
     display: flex;
-    gap: 30px;
-    margin-top: 15px;
+    flex-wrap: wrap;
+    margin-top: 20px;
+    gap: 20px;
 }
 
 .bookCard {
+    border: 1px solid #ccc;
     padding: 10px;
-    border: 2px solid black;
     border-radius: 5px;
+    background-color: #f9f9f9;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    max-width: 200px;
+}
+
+.deleteButton {
+    
 }
